LU-4088 obdecho: Copy entire lsm, not just pointer size

From linux-kernel upstream:
Author: Thomas Meyer <thomas@m3y3r.de>
Date:   Thu Sep 19 23:45:46 2013 +0200

staging: lustre: Cocci spatch "noderef"

sizeof when applied to a pointer typed expression gives the size of the
pointer.
Found by coccinelle spatch "misc/noderef.cocci"

Signed-off-by: Thomas Meyer <thomas@m3y3r.de>

Change-Id: If5ce3597abe1d2a806c94e34a1b7dc4c27f19e02
Reviewed-on: http://review.whamcloud.com/7922
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>